After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767205 - Fix use of nm_utils_escape_ssid()
Fix use of nm_utils_escape_ssid()
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-06-03 16:20 UTC by Dan Williams
Modified: 2016-06-07 15:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
3.18 patch 0001-network-fix-some-SSID-escaping-issues.patch (4.49 KB, patch)
2016-06-03 16:50 UTC, Dan Williams
none Details | Review
3.18 patch 0001-network-fix-some-SSID-escaping-issues.patch (4.30 KB, patch)
2016-06-03 16:54 UTC, Dan Williams
none Details | Review
3.18/3.20 patch 0001-network-fix-some-SSID-escaping-issues.patch (4.29 KB, patch)
2016-06-03 17:04 UTC, Dan Williams
none Details | Review
3.18/3.20 patch 0001-network-fix-some-SSID-escaping-issues.patch (5.00 KB, patch)
2016-06-03 17:23 UTC, Dan Williams
accepted-commit_now Details | Review
3.21+ patch 0001-network-fix-some-SSID-escaping-issues.patch (4.73 KB, patch)
2016-06-03 18:26 UTC, Dan Williams
accepted-commit_now Details | Review

Description Dan Williams 2016-06-03 16:20:06 UTC
UI display should use nm_utils_ssid_to_utf8() which attempts to convert the SSID into something displays non-ASCII characters.  Some parts of the panel already use this, but everything that has UI display should do so as well.  nm_utils_escape_ssid() should only be used for debug printing.  Code doc for each function describes these uses.
Comment 1 Dan Williams 2016-06-03 16:50:12 UTC
Created attachment 329079 [details] [review]
3.18 patch 0001-network-fix-some-SSID-escaping-issues.patch
Comment 2 Dan Williams 2016-06-03 16:54:37 UTC
Created attachment 329080 [details] [review]
3.18 patch 0001-network-fix-some-SSID-escaping-issues.patch
Comment 3 Dan Williams 2016-06-03 16:54:58 UTC
3.18 patch also applies cleanly to 3.20
Comment 4 Dan Williams 2016-06-03 17:04:38 UTC
Created attachment 329083 [details] [review]
3.18/3.20 patch 0001-network-fix-some-SSID-escaping-issues.patch
Comment 5 Dan Williams 2016-06-03 17:23:47 UTC
Created attachment 329085 [details] [review]
3.18/3.20 patch 0001-network-fix-some-SSID-escaping-issues.patch
Comment 6 Dan Williams 2016-06-03 18:26:33 UTC
Created attachment 329087 [details] [review]
3.21+ patch 0001-network-fix-some-SSID-escaping-issues.patch

Patch against git master, accounting for the libnm port.
Comment 7 Bastien Nocera 2016-06-04 14:40:58 UTC
Review of attachment 329087 [details] [review]:

Compiles fine with that fix. Looks good otherwise.

::: panels/network/net-device-wifi.c
@@ +1644,2 @@
         widget = gtk_label_new (title);
+        g_free (title)

missing ";"
Comment 8 Bastien Nocera 2016-06-04 14:41:48 UTC
Review of attachment 329085 [details] [review]:

Looks good as well.
Comment 9 Dan Williams 2016-06-07 15:57:57 UTC
Pushed to master, 3-20, and 3-18.